@@ -38,7 +38,6 @@
   </licenses>
 
 <properties>
-  <base.test.vmargs>-Xms256m -Xmx1024m -XX:MaxPermSize=256m</base.test.vmargs>
   <tycho-version>0.24.0</tycho-version>
   <tycho-extras-version>0.24.0</tycho-extras-version>
   <tycho.scmUrl>scm:git:git://git.eclipse.org/gitroot/tracecompass/org.eclipse.tracecompass.git</tycho.scmUrl>
@@ -144,7 +143,7 @@
       </os>
     </activation>
     <properties>
-      <base.ui.test.vmargs>${base.test.vmargs} -XstartOnFirstThread -Dorg.eclipse.swt.internal.carbon.smallFonts -Djava.awt.headless=false</base.ui.test.vmargs>
+      <base.ui.test.vmargs>-XstartOnFirstThread -Dorg.eclipse.swt.internal.carbon.smallFonts -Djava.awt.headless=false</base.ui.test.vmargs>
     </properties>
   </profile>
   <profile>
@@ -156,7 +155,7 @@
     </activation>
     <properties>
       <!-- Disable webkit integration, especially unstable on Linux -->
-      <base.ui.test.vmargs>${base.test.vmargs} -Dorg.eclipse.swt.browser.DefaultType=mozilla</base.ui.test.vmargs>
+      <base.ui.test.vmargs>-Dorg.eclipse.swt.browser.DefaultType=mozilla</base.ui.test.vmargs>
     </properties>
   </profile>
 </profiles>
@@ -343,6 +342,7 @@
         </configuration>
       </plugin>
     </plugins>
+
     <pluginManagement>
       <plugins>
         <plugin>
@@ -379,13 +379,14 @@
           <artifactId>tycho-p2-repository-plugin</artifactId>
           <version>${tycho-version}</version>
         </plugin>
-	<plugin>
-	  <groupId>org.eclipse.tycho</groupId>
-	  <artifactId>tycho-surefire-plugin</artifactId>
-	  <version>${tycho-version}</version>
-	  <configuration>
-	    <useUIHarness>true</useUIHarness>
-	    <useUIThread>true</useUIThread>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-surefire-plugin</artifactId>
+          <version>${tycho-version}</version>
+          <configuration>
+            <!-- Default configuration, UI tests may have to override these -->
+            <useUIHarness>false</useUIHarness>
+            <useUIThread>false</useUIThread>
             <dependencies>
                <dependency>
                  <type>p2-installable-unit</type>
@@ -394,9 +395,9 @@
                </dependency>
             </dependencies>
             <product>org.eclipse.platform.ide</product>
- 	    <argLine>${tycho.testArgLine} -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
-	  </configuration>
-	</plugin>
+            <argLine>${tycho.testArgLine} ${base.ui.test.vmargs} -Xms512m -Xmx1024m</argLine>
+          </configuration>
+        </plugin>
         <plugin>
           <groupId>org.eclipse.tycho</groupId>
           <artifactId>tycho-versions-plugin</artifactId>
@@ -419,7 +420,7 @@
             </dependency>
           </dependencies>
         </plugin>
-	<plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.7</version>
